--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         }
     },
     "scripts": {
+        "start": "php artisan serve --host 0.0.0.0 --port 10000",
         "setup": [
             "composer install",
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\"",
